tests/test_programs/errors/err_const_reassign.cm
// エラーケース: const変数への再代入
int main() {
    const int MAX = 100;
    MAX = 200;
    // エラー: const変数への再代入
    return 0;
}
